Styled home/featured page
--CHANGELOG--

- Edited book_reviews.ejs partial so that it can dynamically display html for the home/featured page or the full list page

- Added stars to home page

--- a/book_reviews/public/styles/home.css
+++ b/book_reviews/public/styles/home.css
@@ -1,3 +1,37 @@
-/* body {
+body {
     background-color: black;
-} */
+    color: white;
+}
+
+#cover {
+    height: 80%;
+    width: 80%;
+}
+
+#title {
+    font-size: 40px;
+}
+
+.star {
+    clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+    height: 45px;
+    width: 45px;
+    z-index: -1;
+    offset: 10px;
+}
+
+.empty {
+    background-color: gray;
+}
+
+.filled {
+    background-color: gold;
+}
+
+.book-review {
+    height: 100vh;
+}
+
+.header {
+    font-size: 40px;
+}
