--- a/book_reviews/public/styles/navbar.css
+++ b/book_reviews/public/styles/navbar.css
@@ -1,7 +1,7 @@
 #nav-btn {
     position: fixed;
-    top: 10px;
-    left: 10px;
+    top: 5%;
+    left: 5%;
     width: 60px;
     height: 45px;
     z-index: 10;
