--- a/book_reviews/views/partials/book_review.ejs
+++ b/book_reviews/views/partials/book_review.ejs
@@ -22,9 +22,9 @@
                             <% } %>
                         <% } %>
                     </div>
-                    <form action="/review" method="get">
+                    <form action="/review" method="get" class="read-review-form">
                         <input type="hidden" name="id" value="<%= bookReview.id %>">
-                        <button type="submit">Read review</button>
+                        <button type="submit" class="read-review-btn">Read review</button>
                     </form>
                 </div>
             </div>
