--- a/book_reviews/public/styles/general.css
+++ b/book_reviews/public/styles/general.css
@@ -1,3 +1,11 @@
+.noto-sans {
+    font-family: "Noto Sans", sans-serif;
+}
+
+.dm-sans {
+    font-family: "DM Sans", sans-serif;
+}
+
 .dm-sans-large-bold {
     font-family: "DM Sans", sans-serif;
     font-optical-sizing: auto;
@@ -45,4 +53,8 @@
 
 .hidden {
     visibility: hidden;
+}
+
+.white-txt {
+    color: white;
 }
