--- a/book_reviews/views/create_review.ejs
+++ b/book_reviews/views/create_review.ejs
@@ -1,7 +1,7 @@
 <%- include("partials/header.ejs") %>
 <body class="flex-box-column">
     <form class="review-form" autocomplete="off" action="create" method="post">
-        <div class="book-information flex-box-row">
+        <div class="book-information flex-box-column">
             <div class="mb-3">
                 <label for="title" class="form-label h4 white-txt">Book title:</label>
                 <input class="form-control form-control-lg" name="title" type="text" placeholder="Title" required>
@@ -16,7 +16,7 @@
                 <label for="ibsn" class="form-label h4 white-txt">IBSN:</label>
                 <input name="ibsn" class="form-control form-control-lg" type="number"  placeholder="IBSN" required>
             </div>
-            
+
             <div class="date-input-container mb-3">
                 <label for="date_read" class="white-txt form-label h4">Date read:</label>
                 <input class="date-input form-control form-control-lg" name="date_read" type="date" placeholder="Year" max="" required>
