--- a/book_reviews/views/full_list.ejs
+++ b/book_reviews/views/full_list.ejs
@@ -1,8 +1,12 @@
 <%- include("partials/header.ejs") %>
-<body>
+<body class="flex-box-column">
     <%- include("partials/navbar.ejs") %>
+    <div class="title-container">
+        <h1 class="noto-sans header white-txt display-1" id="page-title">Full list</h1>
+        <div class="underline"></div>
+    </div>
     <% if(locals.bookReviews) {%>
-        <div class="book-review-container">
+        <div class="book-review-container flex-box-row">
             <%- include("partials/book_review.ejs", { bookReviews: bookReviews }) %>    
         </div>
     <% } else {%>
