Styled read review and other pages
--CHANGELOG--

- Styled and formatted html on read review page for mobile view

- Added feature to nav bar where sort reviews option is hidden if there is 0 or 1 book review on a webpage!

- Cleaned up styling and html on other pages of for site

--- a/book_reviews/public/styles/home.css
+++ b/book_reviews/public/styles/home.css
@@ -58,3 +58,19 @@ body {
 .read-review-form {
     margin-top: 10px;
 }
+
+.author {
+    margin-bottom: 5px;
+}
+
+.rating-container {
+    margin-top: 10px;
+}
+
+.basic-text {
+    font-size: 20px;
+}
+
+.rating-text {
+    margin: 0px;
+}
