--- a/book_reviews/views/partials/navbar.ejs
+++ b/book_reviews/views/partials/navbar.ejs
@@ -7,21 +7,21 @@
 <div class="flex-box-column hidden" id="nav-menu">
     <div class="nav-option off" id="featured-container">
         <form action="/" method="get">
-            <button type="submit" class="dm-sans-large-bold nav-option">Home</button>
+            <button type="submit" class="dm-sans-large-bold nav-option white-txt">Home</button>
         </form>
     </div>
     <div class="nav-option off" id="full-list-container">
         <form action="/full-list" method="get">
-            <button type="submit" class="dm-sans-large-bold nav-option">Full list</button>
+            <button type="submit" class="dm-sans-large-bold nav-option white-txt">Full list</button>
         </form>
     </div>
     <div class="nav-option off" id="create-container">
         <form action="create" method="get">
-            <button type="submit" class="dm-sans-large-bold nav-option">Create review</button>
+            <button type="submit" class="dm-sans-large-bold nav-option white-txt">Create review</button>
         </form>
     </div>
     <div class="nav-option off" id="sort-method-container">
-        <label for="sort-menu" class="dm-sans-large-bold">Sort reviews:</label>
+        <label for="sort-menu" class="dm-sans-large-bold white-txt">Sort reviews:</label>
         <select id="sort-menu" name="sort_method">
             <option value="highest_rated" class="dm-sans-large-bold">Highest rated</option>
             <option value="lowest_rated" class="dm-sans-large-bold">Lowest rated</option>
