--- a/book_reviews/views/partials/navbar.ejs
+++ b/book_reviews/views/partials/navbar.ejs
@@ -7,7 +7,7 @@
 <div class="flex-box-column hidden" id="nav-menu">
     <div class="nav-option off" id="featured-container">
         <form action="/" method="get">
-            <button type="submit" class="dm-sans-large-bold nav-option white-txt">Home</button>
+            <button type="submit" class="dm-sans-large-bold nav-option white-txt">Featured</button>
         </form>
     </div>
     <div class="nav-option off" id="full-list-container">
@@ -20,11 +20,12 @@
             <button type="submit" class="dm-sans-large-bold nav-option white-txt">Create review</button>
         </form>
     </div>
-    <div class="nav-option off" id="sort-method-container">
-        <label for="sort-menu" class="dm-sans-large-bold white-txt">Sort reviews:</label>
+    <div class="nav-option off flex-box-column" id="sort-method-container">
+        <label for="sort-menu" class="dm-sans-large-bold white-txt nav-sort-text">Sort reviews</label>
+        <br>
         <select id="sort-menu" name="sort_method">
-            <option value="highest_rated" class="dm-sans-large-bold">Highest rated</option>
-            <option value="lowest_rated" class="dm-sans-large-bold">Lowest rated</option>
+            <option value="highest_rated" class="dm-sans sort-option">Highest rated</option>
+            <option value="lowest_rated" class="dm-sans sort-option">Lowest rated</option>
         </select>
     </div>
 </div>
