--- a/book_reviews/views/full_list.ejs
+++ b/book_reviews/views/full_list.ejs
@@ -2,7 +2,7 @@
 <body class="flex-box-column">
     <%- include("partials/navbar.ejs") %>
     <div class="title-container">
-        <h1 class="noto-sans header white-txt display-1" id="page-title">Full list</h1>
+        <h1 class="noto-sans-title header white-txt display-1" id="page-title">Full list</h1>
         <div class="underline"></div>
     </div>
     <% if(locals.bookReviews) {%>
