--- a/book_reviews/public/styles/navbar.css
+++ b/book_reviews/public/styles/navbar.css
@@ -1,23 +1,44 @@
-#nav-btn {
+#nav-container {
     position: fixed;
-    top: 4%;
-    left: 5%;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    background-color: black;
+    min-height: 60px;
+    height: 10vh;
+    width: 100vw;
+    overflow: hidden;
+    transition: .5s ease-in-out;
+}
+
+#nav-btn-container {
+    position: fixed;
+    display: flex;
+    height: 10vh;
+    width: 100%;
+    flex-direction: column;
+    align-items: left;
+    justify-content: center;
+}
+
+#nav-btn {
     width: 60px;
-    height: 45px;
-    z-index: 10;
+    min-height: 45px;
+    margin-left: 10px;
+    z-index: 2;
     cursor: pointer;
     transform: rotate(0deg);
     transition: .5s ease-in-out;
 }
 
 #nav-menu {
-    position: fixed;
-    height: 0%;
+    height: 100%;
     width: 100%;
     top: 0px;
     left: 0px;
-    background-color: black;
+    background-color:#a7312e;
     transition: .5s ease-in-out;
+    z-index: 1;
 }
 
 #sort-menu {
@@ -29,7 +50,7 @@
     position: absolute;
     height: 7px;
     width: 100%;
-    background: #d31a1a;
+    background: white;
     border-radius: 9px;
     opacity: 1;
     left: 0;
@@ -73,6 +94,10 @@
     height: 100%;
 }
 
+#nav-container.open {
+    height: 100vh;
+}
+
 .nav-option {
     background: none;
     margin: 10px;
@@ -91,7 +116,7 @@
 
 .nav-sort-text {
     text-underline-offset: 5px;
-    text-decoration: underline #a7312e;
+    text-decoration: underline white;
 }
 
 .sort-option {
